--- a/index.html
+++ b/index.html
@@ -95,16 +95,6 @@
     </style>
   </head>
   <body>
-    <div id="popup" class="popup">
-      <div class="popup-content">
-        <h2 id="popup-title" style="color: blue"></h2>
-        <p id="popup-message" style="color: green"></p>
-        <div class="popup-buttons">
-          <button id="yesButton" class="popup-button">Yes</button>
-          <button id="noButton" class="popup-button">No</button>
-        </div>
-      </div>
-    </div>
     <svg
       version="1.1"
       baseProfile="full"
@@ -720,6 +710,7 @@
         <line id="collision-line" x1="-300" y1="100" x2="100" y2="100" />
       </defs>
     </svg>
+
     <div id="fullscreen">
       <button
         onclick="
@@ -731,6 +722,35 @@
         ENTER FULLSCREEN
       </button>
     </div>
+
+    <div id="popup" class="popup">
+      <div class="popup-content">
+        <h2 id="popup-title" style="color: blue"></h2>
+        <p id="popup-message" style="color: green"></p>
+        <div class="popup-buttons">
+          <button id="yesButton" class="popup-button">Yes</button>
+          <button id="noButton" class="popup-button">No</button>
+        </div>
+      </div>
+    </div>
+    <!--== SCRIPTS ==============================================================-->
+
+    <!-- 2d geometry SVG library -->
+    <script type="application/javascript" src="lib/2D.js"></script>
+    <script type="application/javascript" src="lib/Path.js"></script>
+
+    <!-- Game files -->
+    <script type="application/javascript" src="src/base.js"></script>
+    <script type="application/javascript" src="src/util.js"></script>
+    <script type="application/javascript" src="src/missile.js"></script>
+    <script type="application/javascript" src="src/wall.js"></script>
+    <script type="application/javascript" src="src/barrier.js"></script>
+    <script type="application/javascript" src="src/barrierQueue.js"></script>
+    <script type="application/javascript" src="src/game.js"></script>
+    <script type="application/javascript" src="src/hud.js"></script>
+    <script type="application/javascript" src="src/banner.js"></script>
+    <script type="application/javascript" src="src/fog.js"></script>
+    <script type="application/javascript" src="src/main.js"></script>
     <script src="src/popup.js"></script>
   </body>
 </html>
