--- a/index.html
+++ b/index.html
@@ -1,27 +1,57 @@
 <html>
   <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <title>Candy Crush</title>
     <meta charset="utf-8" />
-    <title>Candy Crush | nate-games</title>
-    <link rel="shortcut icon" href="./cfqdm2r4.bmp" type="image/x-icon">
+    <link rel="shortcut icon" href="./cfqdm2r4.bmp" type="image/x-icon" />
+    <meta name="format-detection" content="telephone=no" />
+    <meta name="HandheldFriendly" content="true" />
+    <meta name="robots" content="noindex,nofollow" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+    <meta name="apple-mobile-web-app-title" content="Phaser App" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1,
+user-scalable=no, minimum-scale=1.0, maximum-scale=1.01"
+    />
+    <meta name="game-slug" content="Mayas-Match" />
+    <meta name="supports-ad-play-button" content="true" />
+    <link
+      rel="stylesheet"
+      href="/css/stylesheet.css"
+      type="text/css"
+      charset="utf-8"
+    />
+    <script src="/js/custom-phaser.min.js"></script>
+    <script src="/js/game.min.js"></script>
     <style>
-      /* iframe no border fullscreen */
-      html,
-      body {
-        margin: 0;
-        padding: 0;
-        height: 100%;
-        width: 100%;
-      }
-      iframe {
-        border: 0;
-        height: 100%;
-        width: 100%;
+      #focusHelper {
+        width: 100vw;
+        height: 100vh;
+        position: fixed;
+        display: none;
+        background-color: #000000;
+        opacity: 0;
+        top: 0px;
+        left: 0px;
       }
     </style>
   </head>
-  <body>
-    <iframe
-      src="https://images-opensocial.googleusercontent.com/gadgets/ifr?url=https://830581635-628405001538672842.preview.editmysite.com/uploads/b/139890129-709153476852373754/files/cc.xml"
-    ></iframe>
+  <body onload="initGame()">
+    <div id="gameFontPreload">
+      <div style="font-family: ComicSansBold" class="fontPreload">.</div>
+    </div>
+    <div id="focusHelper"></div>
+    <script>
+      window.addEventListener("blur", function () {
+        document.getElementById("focusHelper").style["display"] = "block";
+      });
+      window.addEventListener("focus", function () {
+        document.getElementById("focusHelper").style["display"] = "none";
+      });
+    </script>
+    <script src="/js/scr.js"></script>
   </body>
 </html>
+]]>
