--- a/index.html
+++ b/index.html
@@ -5,12 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta http-equiv="pragma" content="no-cache" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
+    />
+    <meta
+      name="apple-mobile-web-app-status-bar-style"
+      content="black-translucent"
+    />
     <meta charset="utf-8" />
     <link rel="icon" type="image/x-icon" href="img/icon.png" />
     <!-- Set the title bar of the page -->
-    <title>circloO | 3kh0</title>
+    <title>circloO</title>
 
     <!-- Set the background colour of the document -->
     <style>
@@ -75,6 +81,5 @@
 
     <!-- Run the game code -->
     <script type="text/javascript" src="html5game_a5/circloO.js"></script>
-    <script src="/js/main.js"></script>
   </body>
 </html>
