--- a/index.html
+++ b/index.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html lang="en-us">
-<head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-<title>Earn To Die -Unblocked games at school</title>
-<style>
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, user-scalable=no"
+    />
+    <title>Earn To Die</title>
+    <style>
       html {
         box-sizing: border-box;
       }
-      *, *:before, *:after {
+      *,
+      *:before,
+      *:after {
         box-sizing: inherit;
       }
       body {
@@ -29,22 +34,22 @@
         z-index: 2;
       }
       .logo {
-          display: block;
-          max-width: 100vw;
-          max-height: 70vh;
+        display: block;
+        max-width: 100vw;
+        max-height: 70vh;
       }
 
       .progress {
-          margin: 1.5em;
-          border: 1px solid white;
-          width: 50vw;
-          display: none;
+        margin: 1.5em;
+        border: 1px solid white;
+        width: 50vw;
+        display: none;
       }
       .progress .full {
-          margin: 2px;
-          background: white;
-          height: 1em;
-          transform-origin: top left;
+        margin: 2px;
+        background: white;
+        height: 1em;
+        transform-origin: top left;
       }
 
       #loader {
@@ -57,7 +62,7 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        background-color:black;
+        background-color: black;
       }
 
       .spinner,
@@ -86,37 +91,40 @@
           transform: rotate(360deg);
         }
       }
-
     </style>
-</head>
-<body>
-<div id="gameContainer"></div>
-<div id="loader">
-<img class="logo" src="loading.png?v=1">
-<div class="spinner"></div>
-<div class="progress"><div class="full"></div></div>
-</div>
-</body>
-<script src="UnityLoader.js"></script>
-<script>
-  var gameInstance = UnityLoader.instantiate("gameContainer", "EarnToDie.json", {onProgress: UnityProgress});
-  function UnityProgress(gameInstance, progress) {
-    if (!gameInstance.Module) {
-      return;
-    }
-    const loader = document.querySelector("#loader");
-    if (!gameInstance.progress) {
-      const progress = document.querySelector("#loader .progress");
-      progress.style.display = "block";
-      gameInstance.progress = progress.querySelector(".full");
-      loader.querySelector(".spinner").style.display = "none";
-    }
-    gameInstance.progress.style.transform = `scaleX(${progress})`;
-    if (progress === 1 && !gameInstance.removeTimeout) {
-      gameInstance.removeTimeout = setTimeout(function() {
+  </head>
+  <body>
+    <div id="gameContainer"></div>
+    <div id="loader">
+      <img class="logo" src="loading.png?v=1" />
+      <div class="spinner"></div>
+      <div class="progress"><div class="full"></div></div>
+    </div>
+  </body>
+  <script src="UnityLoader.js"></script>
+  <script>
+    var gameInstance = UnityLoader.instantiate(
+      "gameContainer",
+      "EarnToDie.json",
+      { onProgress: UnityProgress }
+    );
+    function UnityProgress(gameInstance, progress) {
+      if (!gameInstance.Module) {
+        return;
+      }
+      const loader = document.querySelector("#loader");
+      if (!gameInstance.progress) {
+        const progress = document.querySelector("#loader .progress");
+        progress.style.display = "block";
+        gameInstance.progress = progress.querySelector(".full");
+        loader.querySelector(".spinner").style.display = "none";
+      }
+      gameInstance.progress.style.transform = `scaleX(${progress})`;
+      if (progress === 1 && !gameInstance.removeTimeout) {
+        gameInstance.removeTimeout = setTimeout(function () {
           loader.style.display = "none";
-      }, 2000);
+        }, 2000);
+      }
     }
-  }
   </script>
 </html>
