--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <title>Happy Hop | 3kh0</title>
-    <link rel="icon" href="./loading-logo.png"
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no, minimal-ui" />
+    <title>Happy Hop</title>
+    <link
+      rel="icon"
+      href="./loading-logo.png"
+      <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no, minimal-ui"
+    />
     <style type="text/css">
       * {
         padding: 0;
@@ -33,17 +38,34 @@
     </div>
     <script src="jquery-2.1.1.min.js"></script>
     <script src="md5.pack.js" type="text/javascript"></script>
-    <script src="/js/main.js" type="text/javascript"></script>
     <script src="c2runtime.js"></script>
     <script>
       function onVisibilityChanged() {
-        if (document.hidden || document.mozHidden || document.webkitHidden || document.msHidden) cr_setSuspended(true);
+        if (
+          document.hidden ||
+          document.mozHidden ||
+          document.webkitHidden ||
+          document.msHidden
+        )
+          cr_setSuspended(true);
         else cr_setSuspended(false);
       }
       document.addEventListener("visibilitychange", onVisibilityChanged, false);
-      document.addEventListener("mozvisibilitychange", onVisibilityChanged, false);
-      document.addEventListener("webkitvisibilitychange", onVisibilityChanged, false);
-      document.addEventListener("msvisibilitychange", onVisibilityChanged, false);
+      document.addEventListener(
+        "mozvisibilitychange",
+        onVisibilityChanged,
+        false
+      );
+      document.addEventListener(
+        "webkitvisibilitychange",
+        onVisibilityChanged,
+        false
+      );
+      document.addEventListener(
+        "msvisibilitychange",
+        onVisibilityChanged,
+        false
+      );
     </script>
   </body>
 </html>
