--- a/index.html
+++ b/index.html
@@ -1,18 +1,16 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <title>Rolling Forests | 3kh0</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width" />
+    <title>Rolling Forests</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
-    <link href="/favicon.ico" rel="icon">
+    <link href="/icon.png" rel="icon" />
   </head>
   <body id="body">
     <div id="game"></div>
     <div id="pausemenu"></div>
     <script src="three.min.js"></script>
     <script src="script.js"></script>
-    <script src="/js/main.js"></script>
   </body>
 </html>
- 
