--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
     <link rel="shortcut icon" type="image/x-icon" href="images/splash.jpeg" />
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <title>Soldier Legend | 3kh0</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no, minimal-ui" />
+    <title>Soldier Legend</title>
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no, minimal-ui"
+    />
     <style type="text/css">
       * {
         padding: 0;
@@ -26,7 +29,6 @@
         -ms-touch-action: none;
       }
     </style>
-    <script src="/js/main.js"></script>
   </head>
   <body>
     <!-- The canvas must be inside a div called c2canvasdiv 3ud -->
@@ -41,14 +43,32 @@
       });
 
       function onVisibilityChanged() {
-        if (document.hidden || document.mozHidden || document.webkitHidden || document.msHidden) cr_setSuspended(true);
+        if (
+          document.hidden ||
+          document.mozHidden ||
+          document.webkitHidden ||
+          document.msHidden
+        )
+          cr_setSuspended(true);
         else cr_setSuspended(false);
       }
 
       document.addEventListener("visibilitychange", onVisibilityChanged, false);
-      document.addEventListener("mozvisibilitychange", onVisibilityChanged, false);
-      document.addEventListener("webkitvisibilitychange", onVisibilityChanged, false);
-      document.addEventListener("msvisibilitychange", onVisibilityChanged, false);
+      document.addEventListener(
+        "mozvisibilitychange",
+        onVisibilityChanged,
+        false
+      );
+      document.addEventListener(
+        "webkitvisibilitychange",
+        onVisibilityChanged,
+        false
+      );
+      document.addEventListener(
+        "msvisibilitychange",
+        onVisibilityChanged,
+        false
+      );
     </script>
   </body>
 </html>
