--- a/game.html
+++ b/game.html
@@ -8,7 +8,7 @@
     <meta charset="utf-8" />
     <link rel="stylesheet" type="text/css" href="styles.css" />
     <link rel="manifest" href="manifest.json" />
-    <title>Stair Race 3D | nate-games</title>
+    <title>Stair Race 3D</title>
     <meta name="description" content="Stair Race 3D" />
     <meta property="og:image" content="stair-race-3d.png" />
 
