--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
 <html>
   <!-- SEAN MADE THIS. https://plus.google.com/u/0/101749103627562194088/ -->
   <head>
-    <title>The Hotel | 3kh0</title>
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet" />
+    <title>The Hotel</title>
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto+Slab"
+      rel="stylesheet"
+    />
     <link href="index.css" rel="stylesheet" />
-		<link rel="icon" href="./splash.png" />
-    <meta name="description" content="A game in which you must escape out of a hotel via multiple choice questions." />
+    <link rel="icon" href="./splash.png" />
+    <meta
+      name="description"
+      content="A game in which you must escape out of a hotel via multiple choice questions."
+    />
     <meta name="author" content="Sean" />
     <meta charset="utf-8" />
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
@@ -19,18 +25,18 @@
         <td>
           <h1>Instructions</h1>
           <p>I think you're able to find out yourself.</p>
-          <p>And just in case you are one of the poor unintelligent ones, the "Wake me up" button over there is the play button.</p>
-          <p>Obviously, there is a lot of dying involved, but don't worry! You'll be one of them one day too.</p>
+          <p>
+            And just in case you are one of the poor unintelligent ones, the
+            "Wake me up" button over there is the play button.
+          </p>
+          <p>
+            Obviously, there is a lot of dying involved, but don't worry! You'll
+            be one of them one day too.
+          </p>
           <p>There are a total of 8 endings.</p>
         </td>
         <td>
           <div id="play" class="btn">Wake me up</div>
-        </td>
-        <td>
-          <h1>Credits</h1>
-          <p>The font is <a href="https://fonts.google.com/specimen/Roboto+Slab" target="_blank">Roboto Slab</a> from Google Fonts</p>
-          <p>A sequel to <a href="../bookmarklets/theHouse.html" target="_blank">the House</a></p>
-          <p>Made by <a href="https://plus.google.com/u/0/+SeanYentheHumansperson" target="_blank">Sean the Human</a></p>
         </td>
       </tr>
     </table>
@@ -53,6 +59,5 @@
 
     <script src="story.js" type="text/javascript"></script>
     <script src="index.js" type="text/javascript"></script>
-		<script src="/js/main.js" type="text/javascript"></script>
   </body>
 </html>
