--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <title>X-Trial Racing</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no, minimal-ui" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no, minimal-ui"
+    />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-touch-fullscreen" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
@@ -37,7 +40,7 @@
     <div id="c2canvasdiv">
       <canvas id="c2canvas" width="720" height="480"> </canvas>
     </div>
-    <script type="application/javascript" src="/js/main.js"></script>
+
     <script src="jquery-2.1.1.min.js"></script>
     <script src="c2runtime.js"></script>
     <script>
@@ -50,13 +53,31 @@
 
       // Pause and resume on page becoming visible/invisible
       function onVisibilityChanged() {
-        if (document.hidden || document.mozHidden || document.webkitHidden || document.msHidden) cr_setSuspended(true);
+        if (
+          document.hidden ||
+          document.mozHidden ||
+          document.webkitHidden ||
+          document.msHidden
+        )
+          cr_setSuspended(true);
         else cr_setSuspended(false);
       }
       document.addEventListener("visibilitychange", onVisibilityChanged, false);
-      document.addEventListener("mozvisibilitychange", onVisibilityChanged, false);
-      document.addEventListener("webkitvisibilitychange", onVisibilityChanged, false);
-      document.addEventListener("msvisibilitychange", onVisibilityChanged, false);
+      document.addEventListener(
+        "mozvisibilitychange",
+        onVisibilityChanged,
+        false
+      );
+      document.addEventListener(
+        "webkitvisibilitychange",
+        onVisibilityChanged,
+        false
+      );
+      document.addEventListener(
+        "msvisibilitychange",
+        onVisibilityChanged,
+        false
+      );
     </script>
   </body>
 </html>
