--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
       </canvas>
     </div>
     <script src="jquery-3.4.1.min.js"></script>
+    <script src="ga_init.js"></script>
     <script src="Photon-Javascript_SDK.min.js"></script>
     <script src="c2runtime.js"></script>
     <script>
