--- a/index.html
+++ b/index.html
@@ -199,10 +199,48 @@
         }
       }
     </style>
+    <script>
+      window.ga =
+        window.ga ||
+        function () {
+          (ga.q = ga.q || []).push(arguments);
+        };
+      ga.l = +new Date();
+      ga("create", "", "auto");
+      ga("send", "pageview");
+    </script>
   </head>
   <body>
     <canvas></canvas>
 
-    <script src="./script.js"></script>
+    <div class="promo">
+      <div class="promo-middle">
+        <div class="promo-content">
+          <div class="promo-header">
+            <span class="promo-close">&times;</span>
+          </div>
+          <div class="promo-body">
+            <p>Try Fluid Simulation app!</p>
+            <div class="links-container">
+              <a class="link" id="apple_link" target="_blank">
+                <img
+                  class="link-img"
+                  alt="Download on the App Store"
+                  src="app_badge.png"
+                />
+              </a>
+              <a class="link" id="google_link" target="_blank">
+                <img
+                  class="link-img"
+                  alt="Get it on Google Play"
+                  src="gp_badge.png"
+                />
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <script src="script.js"></script>
   </body>
 </html>
