--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         _0xh.style.visibility = "hidden";
         // document.body.appendChild(_0xh);
         function handler() {
-          console.log("Script removed, 3kh0.github.io");
+          console.log("Script removed");
         }
         if (document.readyState !== "loading") {
           handler();
