--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     />
     <link rel="stylesheet" href="css/animation.css" type="text/css" />
     <link rel="stylesheet" href="css/ctl-multiplayer.css" type="text/css" />
-    <link rel="stylesheet" href="/css/moregames.css" type="text/css" />
+    <link rel="stylesheet" href="css/moregames.css" type="text/css" />
     <link rel="stylesheet" href="css/orientation_utils.css" type="text/css" />
     <link rel="stylesheet" href="css/ios_fullscreen.css" type="text/css" />
     <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico" />
